tests/k8s_testcases/network-policy-checks-bad-path/port_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: port-test-type
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: helm
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            tier: frontend
      ports:
      # wrong type
      - port:
          - tbd
